# attestral

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  TRADEMARKS.md  action.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
attestral/: __init__.py  aivss.py  attest.py  baseline.py  blast_radius.py  cli.py  compile.py  delta.py  drift.py  evidence.py  fix.py  fleet.py  ifc.py  injection_reach.py  inline_suppress.py  manifest.py  memory.py  ml.py  model.py  narrowing.py  paths.py  policy_verify.py  reachability.py  redteam.py  remediate.py  report_terminal.py  sarif.py  selfplay.py  signing.py  trust_asymmetry.py  waivers.py
attestral/ingest/: __init__.py  _jsonc.py  agent_code.py  agent_config.py  dependencies.py  kubernetes.py  local_config.py  mcp.py  prompts.py  scan.py  terraform.py
attestral/rules/: aws_pack.yaml  azure_pack.yaml  core_rules.yaml  engine.py  gcp_pack.yaml  k8s_pack.yaml
docs/: agentic-threat-model.md  attestation.md  compile-cedar.md  false-positive-budget.md  gallery-disclosure-plan.md  grounded-benchmark.md  ifc.md  launch-strategy.md  limitations.md  memory-signing.md  narrowing.md
evaluation/: README.md  RESULTS.md  adversarial-results.json  adversarial.py  cases.yaml  defense-aware.md  external-recall.md  ml-precision-recall.md  ml-results.json  ml_eval.py  real-world.json  real-world.md  score.py  score_external.py  taxonomy.yaml
evaluation/data/: multilingual-injections.jsonl  obfuscated-injections.jsonl  over-defense.jsonl  paraphrase-injections.jsonl
examples/: attestral-waivers.example.yaml
examples/a2a-cloud-reach/: README.md  mcp.json
examples/a2a-exposure/: README.md  mcp.json
examples/a2a-hardening/: README.md
examples/agent-admin-iam/: deploy.yaml  main.tf
examples/agent-admin-iam-benign/: deploy.yaml  main.tf
examples/agent-fleet-flows/: README.md  mcp.json
examples/agent-supply-trust/: README.md  server.json
examples/agentcore-iam/: README.md  main.tf
examples/agentic-risks/: README.md  mcp.json
examples/aks-local-accounts/: README.md  main.tf
examples/attack-path/: README.md  mcp.json
examples/attested-agent/: .mcp.json  README.md  events.jsonl
examples/aws-core-band/: README.md  main.tf
examples/aws-launch-template/: README.md  main.tf
examples/aws-pack/: main.tf
examples/aws-pack-ext/: README.md  main.tf
examples/azure-pack/: main.tf
examples/benign-long-toolset/: README.md  mcp.json
examples/blast-radius-demo/: README.md  mcp.json
examples/code-agent/: README.md  agent.py
examples/coding-agent-trust/: README.md
examples/compile_cedar/: mcp.json
examples/delta-base/: mcp.json
examples/delta-head/: README.md  mcp.json
examples/demo-project/: runtime-events-r7.jsonl
examples/ecosystem-composite/: README.md
examples/fleet-repo-reader/: .mcp.json  README.md
examples/fleet-repo-runner/: .mcp.json  README.md
examples/gcp-pack/: main.tf
examples/github-actions/: security-delta.yml
examples/guardrails-gap/: README.md  mcp.json
examples/hook-injection/: README.md
examples/ifc-declassified/: README.md  mcp.json
examples/ifc-endorsed/: README.md  mcp.json
examples/injection-reach-demo/: CLAUDE.md  README.md  mcp.json
scripts/: render_codegraph.py  render_docs_data.py  render_index_data.py
tests/: _helpers.py  test_a2a_cloud_reach.py  test_a2a_exposure.py  test_accept.py  test_adversarial.py  test_agent_code.py  test_agentic_rules.py  test_attack_paths.py  test_attest_e2e.py  test_aws_core_band.py  test_aws_pack.py  test_aws_pack_ext.py  test_azure_pack.py  test_baseline.py  test_blast_radius.py  test_capability_trust_rules.py  test_cli.py  test_compile_cedar.py  test_confusable_shadowing.py  test_cross_boundary_moat.py  test_delta.py  test_dependencies_ingest.py  test_discovery.py  test_docs_sync.py  test_drift.py  test_drift_capability.py  test_drift_monitor.py  test_drift_remediate.py  test_evaluation.py  test_evasion_mitigations.py  test_external_recall.py  test_finding_coalesce.py  test_fix.py  test_fixture_readme_sync.py  test_fleet.py  test_fp_budget.py  test_gcp_pack.py  test_guardrails_ingest.py  test_guardrails_rules.py  test_hcl_resolution.py  (+44 more)
training/: README.md  evaluate.py  finetune.py  requirements.txt
website/: architecture.html  capabilities.html  deterministic.html  docs.html  index.html  judge.html  ml-deberta.html  pipeline.html  playground.html  proof.html  system.html
(+95 files in other folders)
