[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attestral"
version = "0.6.0"
description = "Continuous, audit-ready security design review for cloud and agentic systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Attestral" }]
keywords = ["security", "threat-modeling", "design-review", "mcp", "terraform", "kubernetes", "prompt-injection"]
dependencies = ["click>=8.1", "pyyaml>=6.0"]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
terraform = ["python-hcl2>=4.3"]
ml = ["transformers>=4.44", "torch>=2.2"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
attestral = "attestral.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["attestral"]
